Make Java compiler more error tolerant (#274)
While testing Metals on a bunch of open source projects, a common
problem was that a single javac assertion error could take down the
batch indexing of 100+ files in find references. We're analyzing broken
code so it's bound to hit on corners that don't happen otherwise in
normal code.

Now, we override the javac type attribution service (`Attr`) so that we
can catch exceptions when attributing a tree and let the compiler
continue analyzing other files.

<!-- jj-stack-begin -->
- #272
[[Commit](https://github.com/REDACTED_ORG/metals/pull/272/commits/262e8858c04cb16eaa16c1ab28fc839465bdd144)]
- #273
[[Commit](https://github.com/REDACTED_ORG/metals/pull/273/commits/f6f9879dd0788870261f0fd81645cd7575c3c149)]
- → **#274** ←
[[Commit](https://github.com/REDACTED_ORG/metals/pull/274/commits/133fe5962b3a6ff0d97405bc92cd73002bed6205)]
- #275
[[Commit](https://github.com/REDACTED_ORG/metals/pull/275/commits/4db883dc31534ffa4971f2cac53efd5f38a609d6)]
- #276
[[Commit](https://github.com/REDACTED_ORG/metals/pull/276/commits/5e0b15a411934774147b34ed1f822154a18935c5)]
- #282
[[Commit](https://github.com/REDACTED_ORG/metals/pull/282/commits/59945d508b5b41d0085e74ec71439bc5388ada54)]
- #277
[[Commit](https://github.com/REDACTED_ORG/metals/pull/277/commits/1f948db9342bd61e865dce511aab0117008fe444)]
- #278
[[Commit](https://github.com/REDACTED_ORG/metals/pull/278/commits/ed97b1b21bfc8ecebb7cd5497a20b541370aff8f)]
- #279
[[Commit](https://github.com/REDACTED_ORG/metals/pull/279/commits/259765f1e1e2fb42ad9a731854a4a8826f92bfac)]
- #280
[[Commit](https://github.com/REDACTED_ORG/metals/pull/280/commits/a569c0b627c4bac51723ef4e378cf400ba48d674)]
- #281
[[Commit](https://github.com/REDACTED_ORG/metals/pull/281/commits/971824b975cb93a6eca6a8c94dd638c0852eede3)]
- #283
[[Commit](https://github.com/REDACTED_ORG/metals/pull/283/commits/5b9fc44594adb189d92c346bfa3d2dc889124c2f)]
- #264
[[Commit](https://github.com/REDACTED_ORG/metals/pull/264/commit